# agent-runtime

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  ROADMAP.md  agent-runtime.d2  pyproject.toml  sample.github-config.json  sample.ncr-config.json  sample.s3-config.json
.claude/: settings.local.json
backend/: .dockerignore  DESIGN.md  Dockerfile  pyproject.toml
backend/migrations/: 0001_init.sql  0002_custom_image_mode.sql
backend/src/backend/: app.py  audit.py  bootstrap.py  bundle_storage.py  csrf.py  deps.py  k8s_client.py  passwords.py  reconciler.py  settings.py
backend/src/backend/routers/: audit.py  auth.py  bundles.py  chat.py  custom_images.py  source_meta.py  user_meta.py  users.py
backend/tests/: conftest.py  test_backend.py  test_custom_images.py
deploy/: DESIGN.md
deploy/examples/agent-base/: README.md
deploy/examples/agent-base/adk_bundle/: app.py
deploy/examples/agent-base/compiled_graph_bundle/: app.py
deploy/examples/custom-image/go-agent/: Dockerfile  main.go
deploy/examples/custom-image/python-agent/: Dockerfile  app.py
deploy/examples/custom-image/python-mcp/: Dockerfile  app.py
deploy/examples/mcp-base/: README.md
deploy/examples/mcp-base/fastmcp_bundle/: app.py
deploy/examples/mcp-base/mcp_sdk_bundle/: app.py
deploy/examples/tests/: conftest.py  test_agent_bundles.py  test_mcp_bundles.py
deploy/examples/tests/e2e/: README.md  lib.sh  run.sh  test_s3.sh
deploy/k8s/: README.md
deploy/k8s/base/: _shared.yaml  agent-pool-adk.yaml  agent-pool-compiled-graph.yaml  agent-pool-custom.yaml  auth.yaml  backend-k8s-rbac.yaml  backend.yaml  deploy-api.yaml  envoy.yaml  ext-authz.yaml  hpa.yaml  ingress.yaml  keda.yaml  kustomization.yaml  mcp-pool-custom.yaml  mcp-pool-fastmcp.yaml  mcp-pool-mcp-sdk.yaml  migration-job.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  pgbouncer.yaml  postgres.yaml  redis.yaml  secrets.yaml  serviceaccounts.yaml
deploy/k8s/overlays/dev/: kustomization.yaml
deploy/k8s/overlays/prod/: kustomization.yaml
deploy/k8s/overlays/stage/: kustomization.yaml
frontend/: .gitignore  DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/e2e/: agent-lifecycle.spec.ts  helpers.ts  user-access.spec.ts
frontend/src/: App.tsx
frontend/src/__tests__/: api.test.ts
frontend/src/components/: AccessList.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  FileDropZone.tsx  JsonEditor.tsx  Layout.tsx  Paginator.tsx  RequireAdmin.tsx  RequireAuth.tsx  RequireNotForcedChangePassword.tsx  SignatureUploadDialog.tsx  UserSearchInput.tsx
frontend/src/hooks/: useAccess.ts  useCustomImages.ts  usePagination.ts  useSession.ts  useSourceMeta.ts  useUserMeta.ts  useUsers.ts
frontend/src/lib/: api.ts  enums.ts  mergeConfigs.ts  queryClient.ts  schemas.ts
frontend/src/pages/: AuditLogPage.tsx  ChatPage.tsx  CustomImageListPage.tsx  CustomImageNewPage.tsx  DashboardPage.tsx  LoginPage.tsx  MePage.tsx  SourceMetaDetailPage.tsx  SourceMetaListPage.tsx  SourceMetaNewPage.tsx  UserDetailPage.tsx  UserMetaEditPage.tsx  UserNewPage.tsx  UsersListPage.tsx
runtimes/agent-base/: DESIGN.md  Dockerfile  pyproject.toml
runtimes/agent-base/src/agent_base/: app.py  runner.py  settings.py
runtimes/agent-base/tests/: test_runner.py
runtimes/mcp-base/: DESIGN.md  Dockerfile  pyproject.toml
runtimes/mcp-base/src/mcp_base/: app.py  runner.py  settings.py
runtimes/mcp-base/tests/: test_runner.py
scripts/: kaniko-build.sh  ready.sh
services/auth/: DESIGN.md  Dockerfile  pyproject.toml
services/auth/src/auth/: admin.py  app.py  settings.py
services/auth/tests/: conftest.py  test_admin.py  test_app.py  test_auth.py
services/deploy-api/: DESIGN.md  Dockerfile  alembic.ini  pyproject.toml
services/deploy-api/src/deploy_api/: app.py  settings.py
services/deploy-api/tests/: test_app.py
services/ext-authz/: DESIGN.md  Dockerfile  pyproject.toml
services/ext-authz/src/ext_authz/: app.py  settings.py
services/ext-authz/tests/: test_ext_authz.py
services/ext-authz/tests/e2e/: conftest.py  test_envoy_integration.py
