[project]
name = "agents-runtime"
version = "0.1.0"
description = "Runtime platform for LLM agents and MCP servers (Lambda-style dynamic code deployment on k8s)"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
    "packages/common",
    "services/ext-authz",
    "services/auth",
    "services/deploy-api",
    "runtimes/agent-base",
    "runtimes/mcp-base",
    "backend",
]

[tool.uv.sources]
runtime-common = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fakeredis>=2.35.1",
    "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses Depends() in function argument defaults by design (B008).
# ASYNC240: bootstrap file I/O at startup is intentionally synchronous.
"backend/src/backend/**" = ["B008", "ASYNC240"]

[tool.ruff.lint.isort]
known-first-party = [
    "runtime_common",
    "ext_authz",
    "auth",
    "deploy_api",
    "agent_base",
    "mcp_base",
    "backend",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
exclude = ["(?:^|/)tests/", "(?:^|/)examples/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "services", "packages", "runtimes", "backend", "deploy/examples/tests"]
addopts = "--import-mode=importlib"
markers = ["e2e: end-to-end tests requiring Docker"]
