[project]
name = "mcp-base"
version = "0.1.0"
description = "Base runtime for MCP-Pools — Lambda-style dynamic code loader (FastMCP / MCP SDK / DidimRAG / T2SQL)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "runtime-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp>=1.0",
    "fastmcp>=0.2.0",
    "opik>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_base"]
