[project]
name = "auth"
version = "0.1.0"
description = "Auth service — verifies bearer tokens for the runtime"
requires-python = ">=3.12,<3.13"
dependencies = [
    "runtime-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "argon2-cffi>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth"]
