[project]
name = "deploy-api"
version = "0.1.0"
description = "Deploy source-meta — registers agent/MCP code bundles and versions"
requires-python = ">=3.12,<3.13"
dependencies = [
    "runtime-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deploy_api"]
