[project]
name = "ext-authz"
version = "0.1.0"
description = "Envoy ext_authz service — auth + access + resolve + pod pick, consumed by Envoy"
requires-python = ">=3.12,<3.13"
dependencies = [
    "runtime-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "testcontainers>=4.8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ext_authz"]
